# cudf-gen

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: dbgen.cpp  dbgen.cu  utils.hpp
